--- a/90s_overlay/vita.html
+++ b/90s_overlay/vita.html
@@ -254,19 +254,82 @@
 
   <hr class="divider">
 
-  <!-- Awards -->
+  <!-- Team section -->
   <div class="box">
-    <div class="box-title">~~~ PREISE &amp; AUSZEICHNUNGEN ~~~</div>
-    <ul class="award-list">
-      <li>Preis beim Kompositionswettbewerb der Oper Leipzig (2019)</li>
-      <li>Teilnahme am Genre-Fluid Composers Lab (New Amsterdam, NY, 2020)</li>
-      <li>DAAD-Preis fuer internationale Studierende (2021)</li>
-      <li>Elbjazz Festival, Hamburg</li>
-      <li>FOLKBaltica Festival</li>
-      <li>Bachfest Hamburg</li>
-      <li>Festival fuer Alte Musik Koeln</li>
-      <li>Deutsches SchauSpielHaus Hamburg (2025/26)</li>
-    </ul>
+    <div class="box-title">~~~ DAS TEAM HINTER MARTIN ZAMORANO ~~~</div>
+    <div style="display:flex;flex-wrap:wrap;gap:12px;justify-content:center;margin-top:6px;">
+
+      <div style="width:130px;text-align:center;">
+        <img src="../assets/images/465449436_9404329929594584_3540499126917132473_n.jpg"
+             alt="Der Pianist" style="width:100%;height:100px;object-fit:cover;border:3px outset #00ffff;" />
+        <p style="color:#ff00ff;font-weight:bold;font-size:.75rem;margin:4px 0 2px;">Der Pianist</p>
+        <p style="font-size:.7rem;color:#ffffcc;margin:0;">Drückt die Tasten. Manchmal mehrere gleichzeitig. Hat dafür sehr lange studiert.</p>
+      </div>
+
+      <div style="width:130px;text-align:center;">
+        <img src="../assets/images/Kuenstlerfoto_1_-3-.JPG"
+             alt="Der Komponist" style="width:100%;height:100px;object-fit:cover;border:3px outset #00ffff;" />
+        <p style="color:#ff00ff;font-weight:bold;font-size:.75rem;margin:4px 0 2px;">Der Komponist</p>
+        <p style="font-size:.7rem;color:#ffffcc;margin:0;">Erfindet Noten. Schreibt sie auf. Fängt dann an, sich zu hinterfragen.</p>
+      </div>
+
+      <div style="width:130px;text-align:center;">
+        <img src="../assets/images/Martin_sel_-_9_of_21.jpg"
+             alt="Der Produzent" style="width:100%;height:100px;object-fit:cover;border:3px outset #00ffff;" />
+        <p style="color:#ff00ff;font-weight:bold;font-size:.75rem;margin:4px 0 2px;">Der Produzent</p>
+        <p style="font-size:.7rem;color:#ffffcc;margin:0;">Haben Sie sich nicht auch immer schon gefragt, was ein Produzent macht?</p>
+      </div>
+
+      <div style="width:130px;text-align:center;">
+        <img src="../assets/images/IMG_3796.jpg"
+             alt="Der Booking Manager" style="width:100%;height:100px;object-fit:cover;border:3px outset #00ffff;" />
+        <p style="color:#ff00ff;font-weight:bold;font-size:.75rem;margin:4px 0 2px;">Der Booking Manager</p>
+        <p style="font-size:.7rem;color:#ffffcc;margin:0;">Beantwortet E-Mails, wenn er daran denkt, jeden dritten Freitag im Monat. Antwortet sicher bald.</p>
+      </div>
+
+      <div style="width:130px;text-align:center;">
+        <img src="../assets/images/IMG_3701.jpg"
+             alt="Der Social-Media-Direktor" style="width:100%;height:100px;object-fit:cover;border:3px outset #00ffff;" />
+        <p style="color:#ff00ff;font-weight:bold;font-size:.75rem;margin:4px 0 2px;">Der Social-Media-Direktor</p>
+        <p style="font-size:.7rem;color:#ffffcc;margin:0;">Postet gelegentlich. Vorwiegend spät nachts. Inhalte: unklar. Engagement: muss ja.</p>
+      </div>
+
+      <div style="width:130px;text-align:center;">
+        <img src="../assets/images/IMG_3769.jpg"
+             alt="Der Philosoph" style="width:100%;height:100px;object-fit:cover;border:3px outset #00ffff;" />
+        <p style="color:#ff00ff;font-weight:bold;font-size:.75rem;margin:4px 0 2px;">Der Philosoph</p>
+        <p style="font-size:.7rem;color:#ffffcc;margin:0;">Stellt Fragen, die niemand gestellt hat. Sie zu beantworten wäre wirklich unter seiner Würde.</p>
+      </div>
+
+      <div style="width:130px;text-align:center;">
+        <img src="../assets/images/IMG_4000.jpg"
+             alt="Die IT-Abteilung" style="width:100%;height:100px;object-fit:cover;border:3px outset #00ffff;" />
+        <p style="color:#ff00ff;font-weight:bold;font-size:.75rem;margin:4px 0 2px;">Die IT-Abteilung</p>
+        <p style="font-size:.7rem;color:#ffffcc;margin:0;">Hat einmal einen Computer neu gestartet. Es hat funktioniert. Seitdem ist er der IT-Experte.</p>
+      </div>
+
+      <div style="width:130px;text-align:center;">
+        <img src="../assets/images/Katja.png"
+             alt="Creative Director" style="width:100%;height:100px;object-fit:cover;border:3px outset #00ffff;" onerror="this.style.background='#000080'" />
+        <p style="color:#ff00ff;font-weight:bold;font-size:.75rem;margin:4px 0 2px;">Creative Director</p>
+        <p style="font-size:.7rem;color:#ffffcc;margin:0;">Hat die Ästhetik im Griff, so lange es Ocker ist. Hat offenbar ein Faible für Minispiele.</p>
+      </div>
+
+      <div style="width:130px;text-align:center;">
+        <img src="../assets/images/Lucas.png"
+             alt="Fleissbienchen &amp; Vibe-Coder" style="width:100%;height:100px;object-fit:cover;border:3px outset #00ffff;" onerror="this.style.background='#000080'" />
+        <p style="color:#ff00ff;font-weight:bold;font-size:.75rem;margin:4px 0 2px;">Fleissbienchen &amp; Vibe-Coder</p>
+        <p style="font-size:.7rem;color:#ffffcc;margin:0;">Baut die Website. Fragt sich dabei, ob das auch Kunst ist.</p>
+      </div>
+
+      <div style="width:130px;text-align:center;">
+        <img src="../assets/images/Hendrik.png"
+             alt="CTO" style="width:100%;height:100px;object-fit:cover;border:3px outset #00ffff;" onerror="this.style.background='#000080'" />
+        <p style="color:#ff00ff;font-weight:bold;font-size:.75rem;margin:4px 0 2px;">CTO</p>
+        <p style="font-size:.7rem;color:#ffffcc;margin:0;">Verantwortlich für alles. Wirklich für alles.</p>
+      </div>
+
+    </div>
   </div>
 
   <hr class="divider">
