Update navigation links to point to labyrinth.html instead of shows.html

--- a/90s_overlay/index-aim.html
+++ b/90s_overlay/index-aim.html
@@ -321,7 +321,7 @@
 
       <div class="aim-toolbar">
         <a href="kontakt.html" class="aim-tb-btn">IM</a>
-        <a href="shows.html" class="aim-tb-btn">Chat</a>
+        <a href="labyrinth.html" class="aim-tb-btn">Chat</a>
         <a href="vita.html" class="aim-tb-btn">Info</a>
         <span class="aim-tb-btn">Away</span>
       </div>
@@ -399,7 +399,7 @@
       </div>
       <div style="display:flex; flex-direction:column; gap:2px;">
         <a href="vita.html" class="aim-tb-btn" style="display:block; text-align:center; padding:3px;">View Full Vita</a>
-        <a href="../shows.html" class="aim-tb-btn" style="display:block; text-align:center; padding:3px;">Shows</a>
+        <a href="labyrinth.html" class="aim-tb-btn" style="display:block; text-align:center; padding:3px;">Shows</a>
         <a href="../index.html" class="aim-tb-btn" style="display:block; text-align:center; padding:3px;">Normal Website</a>
       </div>
     </div>
