--- a/90s_overlay/index-dos.html
+++ b/90s_overlay/index-dos.html
@@ -210,7 +210,7 @@
         <div class="dialog-body">
           <div id="shows-dos"><span class="cmt">LOADING...</span></div>
           <br>
-          <a href="shows.html" class="dos-btn">[ ALLE SHOWS ]</a>
+          <a href="labyrinth.html" class="dos-btn">[ ALLE SHOWS ]</a>
         </div>
       </div>
     </span></div>
@@ -221,7 +221,7 @@
       <a href="vita.html" class="dos-btn">VITA</a>
       <a href="musik.html" class="dos-btn">PIANO</a>
       <a href="improvisation.html" class="dos-btn">IMPROV</a>
-      <a href="shows.html" class="dos-btn">SHOWS</a>
+      <a href="labyrinth.html" class="dos-btn">SHOWS</a>
       <a href="kontakt.html" class="dos-btn">KONTAKT</a>
       <a href="labyrinth.html" class="dos-btn">LABYRINTH</a>
     </span></div>
