--- a/90s_overlay/index-geocities.html
+++ b/90s_overlay/index-geocities.html
@@ -253,7 +253,7 @@
     <div class="box-title">~~~ LIVE SHOWS ~~~</div>
     <div id="shows-gc"><p style="font-size:0.8rem">Laedt...</p></div>
     <br>
-    <a href="shows.html" class="btn-gc">ALLE SHOWS ANZEIGEN</a>
+    <a href="labyrinth.html" class="btn-gc">ALLE SHOWS ANZEIGEN</a>
   </div>
 
   <hr class="divider">
@@ -269,7 +269,7 @@
         <td><a href="zamoranoandstamer.html">Z &amp; S</a></td>
       </tr>
       <tr>
-        <td><a href="shows.html">SHOWS</a></td>
+        <td><a href="labyrinth.html">SHOWS</a></td>
         <td><a href="kontakt.html">KONTAKT</a></td>
         <td colspan="2"><a href="labyrinth.html">LABYRINTH</a></td>
       </tr>
