--- a/90s_overlay/index.html
+++ b/90s_overlay/index.html
@@ -328,7 +328,7 @@
       <div class="window-body">
         <div id="shows-98"><p>Laedt...</p></div>
         <br>
-        <a href="shows.html"><button>Alle Shows ansehen &raquo;</button></a>
+        <a href="labyrinth.html"><button>Alle Shows ansehen &raquo;</button></a>
       </div>
     </div>
 
@@ -409,7 +409,7 @@
                     </ul>
                   </details>
                 </li>
-                <li><a href="shows.html">Shows</a></li>
+                <li><a href="labyrinth.html">Shows</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
               </ul>
             </details>
