--- a/90s_overlay/musik.html
+++ b/90s_overlay/musik.html
@@ -75,7 +75,7 @@
           <p class="video-title">Canción de Mentiras</p>
           <div class="yt-thumb" data-vid="wVW6wtoHxEM">
             <img src="https://img.youtube.com/vi/wVW6wtoHxEM/hqdefault.jpg" alt="" />
-            <div class="yt-thumb-btn"><svg viewBox="0 0 68 48"><path d="M66.5 7.7a8.5 8.5 0 0 0-6-6C55.8 0 34 0 34 0S12.2 0 7.5 1.7a8.5 8.5 0 0 0-6 6C0 12.4 0 24 0 24s0 11.6 1.5 16.3a8.5 8.5 0 0 0 6 6C12.2 48 34 48 34 48s21.8 0 26.5-1.7a8.5 8.5 0 0 0 6-6C68 35.6 68 24 68 24s0-11.6-1.5-16.3z" fill="#888"/><path d="M27 34l18-10-18-10v20z" fill="#fff"/></svg></div>
+            <div class="yt-thumb-btn"><svg viewBox="0 0 68 48"><path d="M66.5 7.7a8.5 8.5 0 0 0-6-6C55.8 0 34 0 34 0S12.2 0 7.5 1.7a8.5 8.5 0 0 0-6 6C0 12.4 0 24 0 24s0 11.6 1.5 16.3a8.5 8.5 0 0 0 6 6C12.2 48 34 48 34 48s21.8 0 26.5-1.7a8.5 8.5 0 0 0-6-6C68 35.6 68 24 68 24s0-11.6-1.5-16.3z" fill="#888"/><path d="M27 34l18-10-18-10v20z" fill="#fff"/></svg></div>
           </div>
         </div>
       </div>
@@ -90,28 +90,28 @@
           <p class="video-title">Suite for Keys II: Prelude</p>
           <div class="yt-thumb" data-vid="KtF6NXwRAXM">
             <img src="https://img.youtube.com/vi/KtF6NXwRAXM/hqdefault.jpg" alt="" />
-            <div class="yt-thumb-btn"><svg viewBox="0 0 68 48"><path d="M66.5 7.7a8.5 8.5 0 0 0-6-6C55.8 0 34 0 34 0S12.2 0 7.5 1.7a8.5 8.5 0 0 0-6 6C0 12.4 0 24 0 24s0 11.6 1.5 16.3a8.5 8.5 0 0 0 6 6C12.2 48 34 48 34 48s21.8 0 26.5-1.7a8.5 8.5 0 0 0 6-6C68 35.6 68 24 68 24s0-11.6-1.5-16.3z" fill="#888"/><path d="M27 34l18-10-18-10v20z" fill="#fff"/></svg></div>
+            <div class="yt-thumb-btn"><svg viewBox="0 0 68 48"><path d="M66.5 7.7a8.5 8.5 0 0 0-6-6C55.8 0 34 0 34 0S12.2 0 7.5 1.7a8.5 8.5 0 0 0-6 6C0 12.4 0 24 0 24s0 11.6 1.5 16.3a8.5 8.5 0 0 0 6 6C12.2 48 34 48 34 48s21.8 0 26.5-1.7a8.5 8.5 0 0 0-6-6C68 35.6 68 24 68 24s0-11.6-1.5-16.3z" fill="#888"/><path d="M27 34l18-10-18-10v20z" fill="#fff"/></svg></div>
           </div>
         </div>
         <div>
           <p class="video-title">Suite for Keys II: Minimal</p>
           <div class="yt-thumb" data-vid="o40blnJaeow">
             <img src="https://img.youtube.com/vi/o40blnJaeow/hqdefault.jpg" alt="" />
-            <div class="yt-thumb-btn"><svg viewBox="0 0 68 48"><path d="M66.5 7.7a8.5 8.5 0 0 0-6-6C55.8 0 34 0 34 0S12.2 0 7.5 1.7a8.5 8.5 0 0 0-6 6C0 12.4 0 24 0 24s0 11.6 1.5 16.3a8.5 8.5 0 0 0 6 6C12.2 48 34 48 34 48s21.8 0 26.5-1.7a8.5 8.5 0 0 0 6-6C68 35.6 68 24 68 24s0-11.6-1.5-16.3z" fill="#888"/><path d="M27 34l18-10-18-10v20z" fill="#fff"/></svg></div>
+            <div class="yt-thumb-btn"><svg viewBox="0 0 68 48"><path d="M66.5 7.7a8.5 8.5 0 0 0-6-6C55.8 0 34 0 34 0S12.2 0 7.5 1.7a8.5 8.5 0 0 0-6 6C0 12.4 0 24 0 24s0 11.6 1.5 16.3a8.5 8.5 0 0 0 6 6C12.2 48 34 48 34 48s21.8 0 26.5-1.7a8.5 8.5 0 0 0-6-6C68 35.6 68 24 68 24s0-11.6-1.5-16.3z" fill="#888"/><path d="M27 34l18-10-18-10v20z" fill="#fff"/></svg></div>
           </div>
         </div>
         <div>
           <p class="video-title">Nocturne I (Watered Ivy)</p>
           <div class="yt-thumb" data-vid="_aA9-7tpLVs">
             <img src="https://img.youtube.com/vi/_aA9-7tpLVs/hqdefault.jpg" alt="" />
-            <div class="yt-thumb-btn"><svg viewBox="0 0 68 48"><path d="M66.5 7.7a8.5 8.5 0 0 0-6-6C55.8 0 34 0 34 0S12.2 0 7.5 1.7a8.5 8.5 0 0 0-6 6C0 12.4 0 24 0 24s0 11.6 1.5 16.3a8.5 8.5 0 0 0 6 6C12.2 48 34 48 34 48s21.8 0 26.5-1.7a8.5 8.5 0 0 0 6-6C68 35.6 68 24 68 24s0-11.6-1.5-16.3z" fill="#888"/><path d="M27 34l18-10-18-10v20z" fill="#fff"/></svg></div>
+            <div class="yt-thumb-btn"><svg viewBox="0 0 68 48"><path d="M66.5 7.7a8.5 8.5 0 0 0-6-6C55.8 0 34 0 34 0S12.2 0 7.5 1.7a8.5 8.5 0 0 0-6 6C0 12.4 0 24 0 24s0 11.6 1.5 16.3a8.5 8.5 0 0 0 6 6C12.2 48 34 48 34 48s21.8 0 26.5-1.7a8.5 8.5 0 0 0-6-6C68 35.6 68 24 68 24s0-11.6-1.5-16.3z" fill="#888"/><path d="M27 34l18-10-18-10v20z" fill="#fff"/></svg></div>
           </div>
         </div>
         <div>
           <p class="video-title">Nocturne II (Withering Ivy)</p>
           <div class="yt-thumb" data-vid="vsqKqSA6ZnU">
             <img src="https://img.youtube.com/vi/vsqKqSA6ZnU/hqdefault.jpg" alt="" />
-            <div class="yt-thumb-btn"><svg viewBox="0 0 68 48"><path d="M66.5 7.7a8.5 8.5 0 0 0-6-6C55.8 0 34 0 34 0S12.2 0 7.5 1.7a8.5 8.5 0 0 0-6 6C0 12.4 0 24 0 24s0 11.6 1.5 16.3a8.5 8.5 0 0 0 6 6C12.2 48 34 48 34 48s21.8 0 26.5-1.7a8.5 8.5 0 0 0 6-6C68 35.6 68 24 68 24s0-11.6-1.5-16.3z" fill="#888"/><path d="M27 34l18-10-18-10v20z" fill="#fff"/></svg></div>
+            <div class="yt-thumb-btn"><svg viewBox="0 0 68 48"><path d="M66.5 7.7a8.5 8.5 0 0 0-6-6C55.8 0 34 0 34 0S12.2 0 7.5 1.7a8.5 8.5 0 0 0-6 6C0 12.4 0 24 0 24s0 11.6 1.5 16.3a8.5 8.5 0 0 0 6 6C12.2 48 34 48 34 48s21.8 0 26.5-1.7a8.5 8.5 0 0 0-6-6C68 35.6 68 24 68 24s0-11.6-1.5-16.3z" fill="#888"/><path d="M27 34l18-10-18-10v20z" fill="#fff"/></svg></div>
           </div>
         </div>
       </div>
@@ -138,7 +138,7 @@
         <a href="vita.html"><button>Vita</button></a>
         <a href="improvisation.html"><button>Improvisation</button></a>
         <a href="zamoranoandstamer.html"><button>Zamorano &amp; Stamer</button></a>
-        <a href="shows.html"><button>Shows</button></a>
+        <a href="labyrinth.html"><button>Shows</button></a>
         <a href="kontakt.html"><button>Kontakt</button></a>
         <a href="../musik.html"><button>Normale Version</button></a>
       </div>
