--- a/90s_overlay/slap.html
+++ b/90s_overlay/slap.html
@@ -118,7 +118,7 @@
   <!-- Title window -->
   <div class="window">
     <div class="title-bar">
-      <div class="title-bar-text">Slap-O-Mat 98 -- Martin Zamorano</div>
+      <div class="title-bar-text">Interactive Martin Experience</div>
       <div class="title-bar-controls">
         <button aria-label="Minimize"></button>
         <button aria-label="Maximize"></button>
@@ -126,7 +126,7 @@
       </div>
     </div>
     <div class="window-body">
-      <marquee>** KLICK AUF MARTIN ** SO OFT DU WILLST ** ER VERDIENT ES ** WAHRSCHEINLICH **</marquee>
+      <marquee>** VERSCHELLER MARTIN ** SO OFT DU WILLST ** ER VERDIENT ES **</marquee>
     </div>
   </div>
 
@@ -162,7 +162,7 @@
         <a href="index.html"><button>&#8592; Home</button></a>
         <a href="vita.html"><button>Vita</button></a>
         <a href="musik.html"><button>Piano</button></a>
-        <a href="shows.html"><button>Shows</button></a>
+        <a href="labyrinth.html"><button>Shows</button></a>
         <a href="labyrinth.html"><button>Labyrinth</button></a>
         <a href="kontakt.html"><button>Kontakt</button></a>
         <a href="../slap.html"><button>Normale Version</button></a>
