--- a/90s_overlay/zamoranoandstamer.html
+++ b/90s_overlay/zamoranoandstamer.html
@@ -91,9 +91,9 @@
         <a href="vita.html"><button>Vita</button></a>
         <a href="musik.html"><button>Piano</button></a>
         <a href="improvisation.html"><button>Improvisation</button></a>
-        <a href="shows.html"><button>Shows</button></a>
+        <a href="labyrinth.html"><button>Shows</button></a>
         <a href="kontakt.html"><button>Kontakt</button></a>
-        <a href="../zamoranoandstamer.html"><button>Normale Version</button></a>
+        <a href="../zamoranoandstamer.html"><button>Jetzt mal im Ernst</button></a>
       </div>
     </div>
     <div class="status-bar">
