--- a/90s_overlay/improvisation.html
+++ b/90s_overlay/improvisation.html
@@ -82,7 +82,7 @@
         <a href="vita.html"><button>Vita</button></a>
         <a href="musik.html"><button>Piano</button></a>
         <a href="zamoranoandstamer.html"><button>Z&amp;S</button></a>
-        <a href="shows.html"><button>Shows</button></a>
+        <a href="labyrinth.html"><button>Shows</button></a>
         <a href="kontakt.html"><button>Kontakt</button></a>
         <a href="../improvisation.html"><button>Normale Version</button></a>
       </div>
