--- a/90s_overlay/index.html
+++ b/90s_overlay/index.html
@@ -17,6 +17,8 @@
       font-family: 'Arial', sans-serif;
       padding: 20px;
       margin: 0;
+      word-break: break-word;
+      overflow-wrap: break-word;
     }
 
     .desktop {
@@ -31,10 +33,12 @@
     /* Title bar close/min/max buttons look */
     .window {
       margin-bottom: 0;
+      min-width: 0;
     }
 
     .window-body {
       padding: 12px;
+      overflow: visible;
     }
 
     /* Hero window */
@@ -342,11 +346,9 @@
           <button aria-label="Close"></button>
         </div>
       </div>
-      <div class="window-body">
+      <div class="window-body" style="overflow:hidden;">
         <marquee direction="right" scrollamount="2" style="margin-bottom:8px;">&#9733;&#9733;&#9733;&#9733;&#9733; &#9733;&#9733;&#9733;&#9733;&#9733; &#9733;&#9733;&#9733;&#9733;&#9733; &#9733;&#9733;&#9733;&#9733;&#9733; &#9733;&#9733;&#9733;&#9733;&#9733;</marquee>
-        <table id="reviews-table" style="width:100%;border-collapse:collapse;font-size:.78rem;">
-          <tbody id="reviews-body"></tbody>
-        </table>
+        <div id="reviews-body"></div>
       </div>
       <div class="status-bar">
         <p class="status-bar-field" id="reviews-count">6 Rezensionen geladen</p>
@@ -378,7 +380,7 @@
             </button>
           </a>
         </div>
-        <p style="font-size:.65rem;color:#888;margin-top:8px;">* Das Labyrinth ist ein Pflichtprogramm, um die Shows zu sehen.</p>
+
       </div>
     </div>
 
@@ -537,15 +539,11 @@
       }
       var picked = pool.slice(0, 6);
       var tbody = document.getElementById('reviews-body');
-      tbody.innerHTML = picked.map(function(r, idx) {
-        var bg = idx % 2 === 0 ? ' style="background:#f0f0f0;"' : '';
-        return '<tr' + bg + '>'
-          + '<td style="padding:5px 8px;border:1px solid #c0c0c0;width:30%;">'
-          + '<strong>' + r.author + '</strong><br>'
-          + '<span style="color:gold;">' + r.stars + '</span>'
-          + '</td>'
-          + '<td style="padding:5px 8px;border:1px solid #c0c0c0;">&bdquo;' + r.text + '&ldquo;</td>'
-          + '</tr>';
+      tbody.innerHTML = picked.map(function(r) {
+        return '<div style="margin-bottom: 8px;">'
+          + '<div>&bdquo;' + r.text + '&ldquo;</div>'
+          + '<div><strong>' + r.author + '</strong> <span style="color:gold;">' + r.stars + '</span></div>'
+          + '</div>';
       }).join('');
       document.getElementById('reviews-count').textContent = '6 von 23 Rezensionen geladen';
     })();
